# Equalyze

./: .dockerignore  .env.example  .gitignore  .graphifyignore  EQUALYZE_DIAGRAMS.md  README.md  check_all_audits.py  check_audit.py  cleanup_db.py  create_git_history.py  deploy.ps1  equalyze-DESIGN.md  equalyze-PRD.md  equalyze-TRD.md  force_fail.py  package-lock.json  prd_updated.md  test_422.py  test_payload.js  train_all_datasets.py  train_incremental.py  train_loan_model.py
.github/workflows/: equalyze-audit.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
api/: Dockerfile  __init__.py  config.py  main.py  requirements.txt
api/agents/: base_agent.py  governance_agent.py  ingestion_agent.py  orchestrator.py  proxy_agent.py  remediation_agent.py  twin_engine_agent.py
api/models/: audit.py
api/routers/: audits.py  counterfactual.py  datasets.py  monitoring.py  organizations.py
api/services/: bigquery_logger.py  cloud_tasks.py  dataset_parser.py  db.py  demo_datasets.py  fairness_metrics.py  legal_vector_store.py  privacy_metrics.py  proxy_detector.py  scheduler.py
api/utils/: crypto.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scratch/: test_audit.py  test_intersectional.py  test_pipeline_direct.py
sdk/: LICENSE  README.md  equalyze.py  pyproject.toml  setup.py
sdk/equalyze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
worker/: main.py
(+36 files in other folders)
